added background image and font

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <p>with scrambled Egg sauce</p><span>&#8358; 3000</span>
       </div>
       <div>
-        <h4 class='mt-10'>Pancakes</h4>
+        <h4>Pancakes</h4>
         <p>Served with Honey/Butter and Tea</p><span>&#8358; 3000</span>
         <h4 class='mt-10'>Waffles</h4>
         <p>Served with Honey/Butter and Tea</p><span>&#8358; 3000</span>
