modified all files

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="style.css">
   <title>CBE MENU</title>
 </head>
@@ -34,155 +35,252 @@
 
     <!-- BreakFast -->
     <h2 class='head-center'>Nigerian BreakFast</h2>
-    <div class="flex">
-      <div>
-        <h4>Mini Bread rolls with Sausage</h4>
-        <p>Served with Tea</p><span>&#8358; 3000</span>
-        <h4 class='mt-10'>Boiled Yam/ Fried Yam</h4>
-        <p>with scrambled Egg sauce</p><span>&#8358; 3000</span>
-        <h4 class='mt-10'>Fried/grill sweet potatoes</h4>
-        <p>with scrambled Egg sauce</p><span>&#8358; 3000</span>
+      <div class="grid">
+        <div class="flex">
+          <div>
+            <h4>Mini Bread Rolls with Sausage</h4>
+            <p>Served with Tea</p>
+          </div>
+          <span>&#8358; 3000</span>
+        </div>
+        <div class="flex">
+          <div>
+            <h4>Boiled Yam/ Fried Yam</h4>
+            <p>with scrambled Egg sauce</p>
+          </div>
+          <span>&#8358; 3000</span>
+        </div>
+        <div class="flex">
+          <div>
+            <h4>Fried/grill sweet potatoes</h4>
+            <p>with Scrambled Egg Sauce</p>
+          </div>
+          <span>&#8358; 3000</span>
+        </div>
+        <div class="flex">
+          <div>
+            <h4>Pancakes</h4>
+            <p>Served with Honey/Butter and Tea</p>
+          </div>
+          <span>&#8358; 3000</span>
+        </div> 
+      <div class="flex">
+        <div>
+          <h4>Waffles</h4>
+          <p>Served with Honey/Butter and Tea</p>
+        </div>
+        <span>&#8358; 3000</span>
       </div>
-      <div>
-        <h4>Pancakes</h4>
-        <p>Served with Honey/Butter and Tea</p><span>&#8358; 3000</span>
-        <h4 class='mt-10'>Waffles</h4>
-        <p>Served with Honey/Butter and Tea</p><span>&#8358; 3000</span>
-      </div> 
     </div>
 
     <!--Starters -->
     <h2 class="head-center">Starters</h2>
-    <div class="starters flex">
-      <div>
-        <h4>Cream of Mushroom soup </h4>
-        <p>Served with Mini Bread Rolls</p><span>&#8358; 2500</span>
-        <h4 class='mt-10'>Cream of Chicken soup</h4>
-        <p>Served with French Bread</p><span>&#8358; 2500</span>
+      <div class="grid">
+        <div class="flex">
+          <div>
+            <h4>Cream of Mushroom soup </h4>
+            <p>Served with Mini Bread Rolls</p>
+          </div>
+          <span>&#8358; 2500</span>
+        </div>
+        <div class="flex">
+          <div>
+            <h4>Cream of Chicken soup</h4>
+            <p>Served with French Bread</p>
+          </div>
+          <span>&#8358; 2500</span>
+        </div>
+        <div class="flex">
+          <div>
+            <h4>Cream of Beef soup </h4>
+            <p>Served with French Bread</p>
+          </div>
+          <span>&#8358; 2500</span>
+        </div>
+          <div class="flex">
+            <div>
+              <h4>Cream of Vegetable soup </h4>
+              <p>Served with French Fries<br> and Chicken Wings</p>
+            </div>
+            <span>&#8358; 4000</span>
+          </div>
       </div>
-      <div class = 'flex-items'>
-        <h4 class='mt-10'>Cream of Beef soup </h4>
-        <p>Served with French Bread</p><span>&#8358; 2500</span>
-        <h4 class='mt-10'>Cream of Vegetable soup </h4>
-        <p>Served with French Fries and Chicken Wings</p><span>&#8358; 4000</span>
-      </div>
-    </div>
 
     <!-- Pepper Soup -->
     <h2 class="head-center">Pepper Soup</h2>
-    <div class = 'flex'>
-      <div>
-        <h4>Goat Meat Pepper Soup</h4>
-        <span>&#8358; 3000</span>
+      <div class ='grid'>
+        <div class="flex">
+          <h4>Goat Meat Pepper Soup</h4>
+          <span>&#8358; 3000</span>
+        </div>
+        <div class="flex">
+          <h4>Cat Fish Pepper Soup</h4>
+          <span>&#8358; 4000</span>
+        </div>
       </div>
-      <div>
-        <h4 class='mt-10'>Cat Fish Pepper Soup</h4>
-        <span>&#8358; 4000</span>
-      </div>
-    </div>
   
 
     <!-- Salad -->
     <h2 class="head-center">Salad</h2>
-    <div class="salad flex">
-      <div class = 'flex-items'>
-        <h4>Savory grilled Chicken Salad</h4>
-        <p>*Chicken,Onions,Green Pepper,Lettuce<br>Olives served with Vinaigrette dressing</p>
-        <p></p>
-        <span>&#8358; 4500</span>
-        <h4 class='mt-10'>Tuna/Salmon salad</h4>
-        <p>*Tuna/Salmon,Onions,Tomatoes,Cucumber<br>Parsley,Lemon juice,Olive oil and Cumin</p>
-        <span>&#8358; 4500</span>
-        <h4 class='mt-10'>Greek Salad</h4>
-        <p>*Cucumber,Black/Green Olives,Sweet Red & Green pepper</p>
-        <p>Tomatoes,Onions and Feta Cheese</p>
-        <span>&#8358; 4500</span>
+      <div class = 'grid'>
+        <div class="flex">
+          <div>
+            <h4>Savory Grilled Chicken Salad</h4>
+            <p>*Chicken,Onions,Green Pepper,Lettuce<br>Olives served with Vinaigrette dressing</p>
+          </div>
+          <span>&#8358; 4500</span>
+        </div>
+        <div class="flex">
+          <div>
+            <h4>Tuna/Salmon salad</h4>
+            <p>*Tuna/Salmon,Onions,Tomatoes,Cucumber<br>Parsley,Lemon juice,Olive oil and Cumin</p>
+          </div>
+          <span>&#8358; 4500</span>
+        </div>
+        <div class="flex">
+          <div>
+            <h4>Greek Salad</h4>
+            <p>*Cucumber,Black/Green Olives<br>Sweet Red & Green pepper<br>Tomatoes,Onions and Feta Cheese</p>
+          </div>
+          <span>&#8358; 4500</span>
+        </div>
+        <div class="flex">
+          <div>
+            <h4>Caesar Salad</h4>
+            <p>Cucumber,Black/Green Olives<br>Sweet Red and Green pepper<br>
+            Tomatoes,Onions and Feta Cheese</p>
+          </div>
+          <span>&#8358; 4500</span>
+        </div>
+        <div class="flex">  
+          <div>  
+          <h4>Mediterranean Couscous Salad</h4>
+          <p>*Basil,Red and Green Pepper,Tomatoes,Parsley<br>Mint,Lemon zest,Onions,Dry Oregano<br>Black Pepper,Couscous and Sea Salt</p>
+          </div>
+          <span>&#8358; 4500</span>
+        </div>
       </div>
-      <div class = 'flex-items'>
-        <h4 class='mt-10'>Caesar Salad</h4>
-        <p>Cucumber,Black/Green Olives,Sweet Red and Green pepper</p>
-        <p>Tomatoes,Onions and Feta Cheese</p>
-        <span>&#8358; 4500</span>
-        <h4 class='mt-10'>Mediterranean Couscous Salad</h4>
-        <p>*Basil,Red and Green Pepper,Tomatoes,Parsley,Mint</p>
-        <p>Lemon zest,Onions,Dry Oregano</p>
-        <p>Black Pepper,Couscous and Sea Salt</p>
-        <span>&#8358; 4500</span>
-      </div>
-    </div>
     <!-- Main Rice -->
     <h2 class="head-center">Main Course Rice</h2>
-    <div class="flex">
-      <div class = 'flex-items'>
-        <h4>Fried Rice</h4>
-        <p>Served with a choice of beef/goat meat/chicken/fish</p>
-        <p>with plantain or coleslaw</p>
-        <span>&#8358; 3500</span>
-        <h4 class='mt-10'>Caribbean Rice</h4>
-        <p>Served with Stir Fried Chicken</p><span>&#8358; 5000</span>
-        <h4 class='mt-10'>Coconut Rice with Sunset Egg</h4>
-        <p>Served with a choice of Fish/Chicken/Beef with Coleslaw</p><span>&#8358; 4500</span>
-        <h4 class='mt-10'>Jollof Rice</h4>
-        <p>Served with a choice of beef/goat meat/chicken/fish</p>
-        <p>with plantain or coleslaw</p>
-        <span>&#8358; 3500</span>
-        <h4 class='mt-10'>Steamed White Rice served with tomatoe sauce</h4>
-        <p>Served with a choice of goat meat/fish/chicken</p>
-        <p>with plaintain or coleslaw</p>
-        <span>&#8358; 4000</span>
-        <h4 class='mt-10'>Chinese Fried Rice</h4>
-        <p>Served with a choice of fish/chicken/beef with coleslaw</p><span>&#8358; 5000</span>
-        <h4 class='mt-10'>Cinnamon Rice</h4>
-        <p>Served with broccoli choice of beef/goat meat/fish/chicken</p>
-        <p>with plantain or coleslaw</p>
-        <span>&#8358;4000</span>
-        <h4 class='mt-10'>Cuban/Mexican Picadillo</h4>
-        <p>Steamed white rice, minced meat sauce with Olives</p><span>&#8358; 5000</span>
+      <div class="grid">
+        <div class="flex">
+          <div>
+            <h4>Fried Rice</h4>
+            <p>Served with a choice of<br> Beef/Goat meat/Chicken/Fish<br>with Plantain or Coleslaw</p>
+          </div>
+          <span>&#8358; 3500</span>
+        </div>
+        <div class="flex">
+          <div>
+            <h4>Caribbean Rice</h4>
+            <p>Served with Stir Fried Chicken</p>
+          </div>
+          <span>&#8358; 5000</span>
+        </div>
+        <div class="flex">
+          <div>
+            <h4>Coconut Rice with Sunset Egg</h4>
+          <p>Served with a choice of<br> Fish/Chicken/Beef with Coleslaw</p>
+          </div>
+          <span>&#8358; 4500</span>
+        </div>
+        <div class="flex">
+          <div>
+            <h4>Jollof Rice</h4>
+            <p>Served with a choice of<br>Beef/Goat Meat/Chicken/Fish<br>with Plantain or Coleslaw</p>
+          </div>
+          <span>&#8358; 3500</span>
+        </div>
+        <div class="flex">
+          <div>
+            <h4>Steamed White Rice</h4>
+            <p>
+              Served with Tomatoe Sauce.<br>
+              Served with a choice of<br> Beef/Goat Meat/Chicken/Fish<br>with Plantain or Coleslaw</p>
+          </div>
+          <span>&#8358; 4000</span>
+        </div>
+        <div>
+          <h4>Chinese Fried Rice</h4>
+          <p>Served with a choice of Fish/Chicken/Beef with Coleslaw</p><span>&#8358; 5000</span>
+        </div>
+        <div>
+          <h4>Cinnamon Rice</h4>
+          <p>Served with Broccoli with a choice of Beef/Goat Meat/Fish/Chicken<br>
+          with Plantain or Coleslaw</p>
+          <span>&#8358;4000</span>
+        </div>
+        <div>
+          <h4>Cuban/Mexican Picadillo</h4>
+          <p>steamed white Rice, Minced Meat sauce with Olives</p><span>&#8358; 5000</span>
+        </div>
+        <div>
+          <h4>Honey Butter Garlic Chiken</h4>
+          <p>with Steamed White Rice</p>
+          <span>&#8358;4500</span>
+        </div>
+        <div>
+          <h4>Cilantro Lime Chicken</h4>
+          <p>with Steamed white Rice,Avocado<br>Pineapple cubes,Tomatoes</p>
+          <span>&#8358; 5000</span>
+        </div>
+        <div>
+          <h4>Thai Veggie Fried Rice</h4>
+          <p>with Toasted Cashews raisings,Pear,Carrot<br>Tomatoes with any protein</p>
+          <span>&#8358; 5000</span>
+        </div>
+        <div>
+          <h4>Moroccan Rice</h4>
+          <p>with Chicken</p><span>&#8358; 5000</span>
+        </div>
+        <div>
+          <h4>Lemon Butter Chicken Rice</h4>
+          <p>with Vegetables</p><span>&#8358; 5000</span>
+        </div>
+        <div>
+          <h4>Chinese Fried Rice Extra </h4>
+          <p>with Shrimps</p><span>&#8358; 9000</span>
+        </div>
+        <div>
+          <h4>Pineapple Shrimp Rice</h4>
+          <p>(Rice,Pineapple shrimps and Vegetables)</p><span>&#8358; 9000</span>
+        </div>
+        <div>
+          <h4>Chinese Fried Rice with Chicken Wings</h4>
+          <span>&#8358; 6000</span>
+        </div>
       </div>
-      <div class = 'flex-items'>
-        <h4 class='mt-10'>Honey Butter Garlic Chiken</h4>
-        <p>with Steamed White Rice</p>
-        <span>&#8358;4500</span>
-        <h4 class='mt-10'>Cilantro Lime Chicken</h4>
-        <p>with Steamed white Rice,Avocado</p>
-        <p>Onions,Pineaple cubes,Tomatoes</p>
-        <span>&#8358; 5000</span>
-        <h4 class='mt-10'>Thai Veggie Fried Rice</h4>
-        <p>with toasted Cashews raisings,Pear,Carrot</p>
-        <p>Tomatoes with any protein</p>
-        <span>&#8358; 5000</span>
-        <h4 class='mt-10'>Moroccan Rice with Chicken</h4>
-        <p></p><span>&#8358; 5000</span>
-        <h4 class='mt-10'>Lemon Butter Chicken Rice</h4>
-        <p>with Vegetables</p><span>&#8358; 5000</span>
-        <h4 class='mt-10'>Chinese Fried Rice Extra </h4>
-        <p>with Shrimps</p><span>&#8358; 9000</span>
-        <h4 class='mt-10'>Pineapple Shrimp Rice</h4>
-        <p>(Rice,Pinapple shrimps and vegetables)</p><span>&#8358; 9000</span>
-        <h4 class='mt-10'>Chinese Fried Rice with Chicken Wings</h4>
-        <span>&#8358; 6000</span>
-      </div>
-    </div>
+
+      <!-- Pasta -->
 
     <h2 class="head-center">Main Course Pasta</h2>
-    <div class="pasta flex">
-      <div class = 'flex-items'>
+    <div class="grid">
+      <div>
         <h4>Spaghetti Bolognese</h4>
-        <p>*Spaghetti served in minced meat or meat balls sauce</p><span>&#8358; 5000</span>
-        <h4 class='mt-10'>Fusili Pasta</h4>
-        <p>*Pasta with creamy beef soup,vegetables with parsley dressing</p><span>&#8358; 5000</span>
-        <h4 class='mt-10'>Spaghetti Bolognese Extra</h4>
-        <p>*Spaghetti served in minced meat or meat balls sauce and shrimps</p><span>&#8358; 9000</span>
-        <h4 class='mt-10'>Spaghetti Puttanesca</h4>
-        <p>*olives,basil,chopped tomatoes,meat balls/minced meat</p><span>&#8358;5000</span>
-        <h4 class='mt-10'>Spaghetti Pasta with Tuna Fish</h4>
+        <p>*Spaghetti served in Minced Meat or Meat Balls Sauce</p><span>&#8358; 5000</span>
+      </div>
+      <div>
+        <h4>Fusili Pasta</h4>
+        <p>*Pasta with Creamy Beef Soup,Vegetables with parsley dressing</p><span>&#8358; 5000</span>
+      </div>
+      <div>
+        <h4>Spaghetti Bolognese Extra</h4>
+        <p>*Spaghetti served in Minced Meat or Meat Balls Sauce and Shrimps</p><span>&#8358; 9000</span>
+      </div>
+      <div>
+        <h4>Spaghetti Puttanesca</h4>
+        <p>*Olives,Basil,Chopped Tomatoes,Meat Balls/Minced Meat</p><span>&#8358;5000</span>
+      </div>
+      <div>
+        <h4>Spaghetti Pasta with Tuna Fish</h4>
         <span>&#8358; 6000</span>
       </div>
-      <div class = 'flex-items'>
+      <div>
         <h4 class='mt-10'>Chicken Alfrado Pasta</h4>
-        <p>*Fettuccine Pasta served in creamy parmesan cheese sauce</p><span>&#8358; 5000</span>
-        <h4 class='mt-10'>Chicken Alfrado Pasta</h4>
-        <p>*Fettuccine Pasta served in creamy <br> parmesan cheese sauce with Shrimps</p><span>&#8358; 9000</span>
+        <p>*Fettuccine Pasta served in creamy<br>Parmesan Cheese Sauce with Shrimps</p><span>&#8358; 9000</span>  
+      </div>
+      
+        
         <h4 class='mt-10'>Chicken Penne Arrabiata Pasta</h4>
         <p>*Pasta served in tomatoes sauce and parmesan cheese</p><span>&#8358; 5000</span>
         <h4 class='mt-10'>Creamy Chicken Penne Pasta</h4>
