--- a/drinks.html
+++ b/drinks.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
     <title>CBE MENU</title>
   </head>
@@ -373,101 +372,147 @@
 
     <!-- MockTails -->
     <h2 class="head-center">MockTails</h2>
-    <div class="flex">
-      <div>
-        <h4>Chapman</h4>
-        <span>&#8358; 2000</span>
-        <h4>Ginger Dew</h4>
-        <span>&#8358; 2000</span>
-        <h4>Barbados Surprise</h4>
-        <span>&#8358; 2000</span>
-        <h4>Virgin Pinacolada</h4>
-        <span>&#8358; 2000</span>
-        <h4>Florida</h4>
-        <span>&#8358; 2000</span>
-        <h4>Yellow Bird</h4>
-        <span>&#8358; 2000</span>
+    <div class="grid">
+        <div class="flex">
+          <h4>Chapman</h4>
+          <span>&#8358; 2000</span>
+        </div>
+        <div class="flex">
+          <h4>Ginger Dew</h4>
+          <span>&#8358; 2000</span>
+        </div>
+        <div class="flex">
+          <h4>Barbados Surprise</h4>
+          <span>&#8358; 2000</span>
+        </div>
+        <div class="flex">
+          <h4>Virgin Pinacolada</h4>
+          <span>&#8358; 2000</span>
+        </div>
+        <div class="flex">
+          <h4>Florida</h4>
+          <span>&#8358; 2000</span>
+        </div>
+        <div class="flex">
+          <h4>Yellow Bird</h4>
+          <span>&#8358; 2000</span>
+        </div>
+        <div class="flex">
+          <h4>Annora</h4>
+          <span>&#8358; 2000</span>
+        </div>
+        <div class="flex">
+          <h4>After Glow</h4>
+          <span>&#8358; 2000</span>
+        </div>
+        <div class="flex">
+          <h4>Sunset Beach</h4>
+          <span>&#8358; 2000</span>
+        </div>
+        <div class="flex">
+          <h4>Virgin Mojito</h4>
+          <span>&#8358; 2000</span>
+        </div>
+        <div class="flex">  
+          <h4>Dudu's Cucumber</h4>
+          <span>&#8358; 2000</span>
+        </div>
       </div>
-      <div>
-        <h4>Annora</h4>
-        <span>&#8358; 2000</span>
-        <h4>After Glow</h4>
-        <span>&#8358; 2000</span>
-        <h4>Sunset Beach</h4>
-        <span>&#8358; 2000</span>
-        <h4>Virgin Mojito</h4>
-        <span>&#8358; 2000</span>
-        <h4>Dudu's Cucumber</h4>
-        <span>&#8358; 2000</span>
-      </div>
-    </div>
   
     <!-- Cocktails -->
     <h2 class="head-center">Cocktails</h2>
-    <div class="flex">
-      <div>
-        <h4>Gin & Coke</h4>
-        <span>&#8358; 2000</span>
-        <h4>Mojito</h4>
-        <span>&#8358; 3000</span>
-        <h4>Dragon's Blood</h4>
-        <span>&#8358; 3500</span>
-        <h4>Cosmopolitan</h4>
-        <span>&#8358; 3500</span>
-        <h4>Pina Colada</h4>
-        <span>&#8358; 3500</span>
-        <h4>Fire and Ice Tea</h4>
-        <span>&#8358; 3500</span>
-        <h4>Strawberry Blonde</h4>
-        <span>&#8358; 3500</span>
+      <div class="grid">
+        <div class="flex">
+          <h4>Gin & Coke</h4>
+          <span>&#8358; 2000</span>
+        </div>
+        <div class="flex">
+          <h4>Mojito</h4>
+          <span>&#8358; 3000</span>
+        </div>
+        <div class="flex">
+          <h4>Dragon's Blood</h4>
+          <span>&#8358; 3500</span>
+        </div>
+        <div class="flex">
+          <h4>Cosmopolitan</h4>
+          <span>&#8358; 3500</span>
+        </div>
+        <div class="flex">
+          <h4>Pina Colada</h4>
+          <span>&#8358; 3500</span>
+        </div>
+        <div class="flex">
+          <h4>Fire and Ice Tea</h4>
+          <span>&#8358; 3500</span>
+        </div>
+        <div class="flex">
+          <h4>Strawberry Blonde</h4>
+          <span>&#8358; 3500</span>
+        </div>
+        <div class="flex">
+          <h4>Screw Driver</h4>
+          <span>&#8358; 3500</span>
+        </div>
+        <div class="flex">
+          <h4>Cuba Libre</h4>
+          <span>&#8358; 3000</span>
+        </div>
+          <div class="flex">
+            <h4>Tequila Sunrise</h4>
+            <span>&#8358; 3500</span>
+          </div>
+          <div class="flex">
+            <h4>Long Island</h4>
+            <span>&#8358; 4500</span>
+          </div>
+        <div class="flex">
+          <h4>Margarita</h4>
+          <span>&#8358; 3500</span>
+        </div>
+        <div class="flex">
+          <h4>Sex on the Beach</h4>
+          <span>&#8358; 3500</span>
+        </div>  
       </div>
-      <div>
-        
-        <h4>Screw Driver</h4>
-        <span>&#8358; 3500</span>
-        <h4>Cuba Libre</h4>
-        <span>&#8358; 3000</span>
-        <h4>Tequila Sunrise</h4>
-        <span>&#8358; 3500</span>
-        <h4>Long Island</h4>
-        <span>&#8358; 4500</span>
-        <h4>Margarita</h4>
-        <span>&#8358; 3500</span>
-        <h4>Sex on the Beach</h4>
-        <span>&#8358; 3500</span>
-      </div>
-    </div>
     
 
     <!-- Beer -->
     <h2 class="head-center">Beer</h2>
-    <div class="flex">
-      <div>
+    <div class="grid">
+      <div class="flex">
         <h4>Heinekan</h4>
         <span>&#8358;1000</span>
+      </div>
+      <div class="flex">
         <h4>Big Stout</h4>
         <span>&#8358; 1000</span>
+      </div>
+      <div class="flex">
         <h4>Budweiser</h4>
         <span>&#8358; 1000</span>
       </div>
-      <div>
+      <div class="flex">
         <h4>Desperado</h4>
         <span>&#8358; 1000</span>
+      </div>
+      <div class="flex">
         <h4>Smirnoff Ice</h4>
         <span>&#8358; 1000</span>
+      </div>
+      <div class="flex">
         <h4>Tiger</h4>
         <span>&#8358; 1000</span>
-      </div>
+      </div>  
     </div>
-
     <!-- Extras -->
       <h2 class="head-center">Extras</h2>
-      <div class="flex">
-        <div>
+      <div class="grid">
+        <div class="flex">
           <h4>Double Black</h4>
           <span>&#8358; 1500</span>
         </div>
-        <div>
+        <div class="flex">
           <h4>Smirnoff Ice</h4>
           <span>&#8358; 1500</span>
         </div>
@@ -477,7 +522,6 @@
   <footer>
     <ul>
       <li><a href="">Instagram</a></li>
-      <li><a href="">Facebook</a></li>
     </ul>
 </footer> 
 
