--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="grid">
       <div class="flex">
         <div>
-          <h4>Mini Bread Rolls </h4>
+          <h4>Mini Bread Rolls</h4>
           <p>with Sausage Served with Tea</p>
         </div>
         <span>&#8358; 3000</span>
@@ -126,14 +126,14 @@
     <div class='grid'>
       <div class="flex">
         <div>
-          <h4>Savory Grilled Chicken<br>Salad</h4>
-          <p>*Chicken,Onions,Green Pepper,Lettuce<br>Olives served with Vinaigrette dressing</p>
+          <h4>Savory Grilled<br>Chicken Salad</h4>
+          <p>*Chicken,Onions<br>Green Pepper,Lettuce,Olives<br>served with Vinaigrette dressing</p>
         </div>
         <span>&#8358; 4500</span>
       </div>
       <div class="flex">
         <div>
-          <h4>Tuna/Salmon salad</h4>
+          <h4>Tuna/Salmon Salad</h4>
           <p>*Tuna/Salmon,Onions,Tomatoes<br>Cucumber,Parsley,Lemon juice<br>Olive oil and Cumin</p>
         </div>
         <span>&#8358; 4500</span>
@@ -156,7 +156,7 @@
       <div class="flex">
         <div>
           <h4>Mediterranean Couscous Salad</h4>
-          <p>*Basil,Red and Green Pepper,Tomatoes,Parsley<br>Mint,Lemon zest,Onions,Dry Oregano<br>Black Pepper,Couscous
+          <p>*Basil,Red and Green Pepper,Tomatoes<br>Parsley,Mint,Lemon Zest,Onions<br>Dry Oregano,Black Pepper<br>Couscous
             and Sea Salt</p>
         </div>
         <span>&#8358; 4500</span>
