--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
       </div>
       <div class="flex">
         <div>
-          <h4>Mediterranean Couscous Salad</h4>
-          <p>*Basil,Red and Green Pepper,Tomatoes<br>Parsley,Mint,Lemon Zest,Onions<br>Dry Oregano,Black Pepper<br>Couscous
+          <h4>Mediterranean<br>Couscous Salad</h4>
+          <p>*Basil,Tomatoes,Parsley<br>Red and Green Pepper,<br>Mint,Lemon Zest,Onions<br>Dry Oregano,Black Pepper<br>Couscous
             and Sea Salt</p>
         </div>
         <span>&#8358; 4500</span>
@@ -181,7 +181,7 @@
       </div>
       <div class="flex">
         <div>
-          <h4>Coconut Rice with Sunset Egg</h4>
+          <h4>Coconut Rice with<br>Sunset Egg</h4>
           <p>Served with a choice of<br> Fish/Chicken/Beef with Coleslaw</p>
         </div>
         <span>&#8358; 4500</span>
@@ -212,21 +212,21 @@
       <div class="flex">
         <div>
           <h4>Cinnamon Rice</h4>
-          <p>Served with Broccoli with a choice of <br>Beef/Goat Meat/Fish/Chicken<br>
-            with Plantain or Coleslaw</p>
+          <p>Served with Broccoli<br>with a choice of <br>Beef/Goat Meat/Fish/Chicken<br>
+          with Plantain or Coleslaw</p>
         </div>
         <span>&#8358;4000</span>
       </div>
       <div class="flex">
         <div>
           <h4>Cuban/Mexican Picadillo</h4>
-          <p>steamed white Rice, Minced Meat sauce<br>with Olives</p>
+          <p>steamed White Rice<br>Minced Meat sauce with Olives</p>
         </div>
         <span>&#8358; 5000</span>
       </div>
       <div class="flex">
         <div>
-          <h4>Honey Butter Garlic Chiken</h4>
+          <h4>Honey Butter Garlic Chicken</h4>
           <p>with Steamed White Rice</p>
         </div>
         <span>&#8358;4500</span>
