--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
       </div>
       <div class="flex">
         <div>
-          <h4>Honey Butter Garlic Chicken</h4>
+          <h4>Honey Butter<br>Garlic Chicken</h4>
           <p>with Steamed White Rice</p>
         </div>
         <span>&#8358;4500</span>
@@ -234,14 +234,14 @@
       <div class="flex">
         <div>
           <h4>Cilantro Lime Chicken</h4>
-          <p>with Steamed White Rice,Avocado<br>Pineapple Cubes,Tomatoes</p>
+          <p>with Steamed White <br>RiceAvocado<br>Pineapple Cubes,Tomatoes</p>
         </div>
         <span>&#8358; 5000</span>
       </div>
       <div class="flex">
         <div>
           <h4>Thai Veggie Fried Rice</h4>
-          <p>with Toasted Cashew, Raisings,Pear,Carrot<br>Tomatoes with any protein</p>
+          <p>with Toasted Cashew, Raisings<br>Pear,Carrot,Tomatoes<br>with any protein</p>
         </div>
         <span>&#8358; 5000</span>
       </div>
