--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       </div>
     </div>
     <!-- Main Rice -->
-    <h2 class="head-center">Main Course Rice</h2>
+    <h2 class="head-center">Rice</h2>
     <div class="grid">
       <div class="flex">
         <div>
@@ -241,7 +241,7 @@
       <div class="flex">
         <div>
           <h4>Thai Veggie Fried Rice</h4>
-          <p>with Toasted Cashew, Raisings<br>Pear,Carrot,Tomatoes<br>with any protein</p>
+          <p>with Toasted Cashew,Raisings,Pear,Carrot,Tomatoes<br>with any protein</p>
         </div>
         <span>&#8358; 5000</span>
       </div>
@@ -254,7 +254,7 @@
       </div>
       <div class="flex">
         <div>
-          <h4>Lemon Butter Chicken Rice</h4>
+          <h4>Lemon Butter<br>Chicken Rice</h4>
           <p>with Vegetables</p>
         </div>
         <span>&#8358; 5000</span>
@@ -269,7 +269,7 @@
       <div class="flex">
         <div>
           <h4>Pineapple Shrimp Rice</h4>
-          <p>(Rice,Pineapple shrimps and Vegetables)</p>
+          <p>Rice,Pineapple<br>Shrimps and Vegetables</p>
         </div>
         <span>&#8358; 9000</span>
       </div>
@@ -284,7 +284,7 @@
 
     <!-- Pasta -->
 
-    <h2 class="head-center">Main Course Pasta</h2>
+    <h2 class="head-center">Pasta</h2>
     <div class="grid">
       <div class="flex">
         <div>
@@ -302,7 +302,7 @@
       </div>
       <div class="flex">
         <div>
-          <h4>Spaghetti Bolognese Extra</h4>
+          <h4>Spaghetti Bolognese<br>Extra</h4>
           <p>*Spaghetti served in Minced Meat <br>or Meat Balls Sauce and Shrimps</p>
         </div>
         <span>&#8358; 9000</span>
