--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
       <div class="flex">
         <div>
           <h4>Thai Veggie Fried Rice</h4>
-          <p>with Toasted Cashew,Raisings,Pear,Carrot,Tomatoes<br>with any protein</p>
+          <p>with Toasted Cashew,Raisings<br>Pear,Carrot,Tomatoes<br>with any protein</p>
         </div>
         <span>&#8358; 5000</span>
       </div>
@@ -261,7 +261,7 @@
       </div>
       <div class="flex">
         <div>
-          <h4>Chinese Fried Rice Extra </h4>
+          <h4>Chinese Fried Rice<br>Extra </h4>
           <p>with Shrimps</p>
         </div>
         <span>&#8358; 9000</span>
@@ -324,20 +324,20 @@
       <div class="flex">
         <div>
           <h4>Chicken Alfrado Pasta</h4>
-          <p>*Fettuccine Pasta served in creamy<br>Parmesan Cheese Sauce with Shrimps</p>
+          <p>*Fettuccine Pasta served in <br>creamy Parmesan Cheese Sauce<br>with Shrimps</p>
         </div>
         <span>&#8358; 9000</span>
       </div>
       <div class="flex">
         <div>
-          <h4>Chicken Penne Arrabiata Pasta</h4>
+          <h4>Chicken Penne<br>Arrabiata Pasta</h4>
           <p>*Pasta served in Tomatoe sauce <br>and Parmesan cheese</p>
         </div>
         <span>&#8358; 5000</span>
       </div>
       <div class="flex">
         <div>
-          <h4>Creamy Chicken Penne Pasta</h4>
+          <h4>Creamy Chicken<br>Penne Pasta</h4>
           <p>served with Toasted Bread</p>
         </div>
         <span>&#8358; 5000</span>
@@ -359,7 +359,7 @@
       <div class='flex'>
         <div>
           <h4>Pounded Yam/ Semovita<br> Wheat/ Plantain Flour</h4>
-          <p>Served with Vegetable Soup with a choice <br>of Fish/Goat Meat/Beef</p>
+          <p>Served with Vegetable Soup<br> with a choice of Fish/Goat Meat/Beef</p>
         </div>
         <span>&#8358; 4000</span>
       </div>
