--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
       <div class="flex">
         <div>
           <h4>Chicken Alfrado Pasta</h4>
-          <p>*Fettuccine Pasta served in <br>creamy Parmesan Cheese Sauce<br>with Shrimps</p>
+          <p>*Fettuccine Pasta served in <br>Creamy Parmesan Cheese Sauce<br>with Shrimps</p>
         </div>
         <span>&#8358; 9000</span>
       </div>
@@ -380,7 +380,7 @@
       <div class="flex">
         <div>
           <h4>Pounded Yam/ Semovita<br> Wheat/ Plantain Flour</h4>
-          <p>Served with Bitter Leaf Soup <br>with a choice of Fish/Goat Meat or Beef</p>
+          <p>Served with Bitter Leaf Soup <br>with a choice of<br>Fish/Goat Meat or Beef</p>
         </div>
         <span>&#8358; 3500</span>
       </div>
@@ -392,14 +392,14 @@
       <div class='flex'>
         <div>
           <h4>Chicken Nugget</h4>
-          <p>with French Fries, Sausage and Ketchup</p>
+          <p>with French Fries, Sausage<br>and Ketchup</p>
         </div>
         <span>&#8358; 6000</span>
       </div>
       <div class='flex'>
         <div>
           <h4>French Fries</h4>
-          <p>Served with Stir Fries<br>with Sweet Pepper,Onions and garnished Egg</p>
+          <p>Served with Stir Fries<br>Sweet Pepper,Onions<br>garnished with Egg</p>
         </div>
         <span>&#8358; 3500</span>
       </div>
@@ -420,8 +420,8 @@
       <div class="flex">
         <div>
           <h4>French Fries</h4>
-          <p>with stir Fried Beef/ Chicken/ Vegetables<br>
-            served with steamed white Rice</p>
+          <p>with stir Fried Beef<br>Chicken/ Vegetables<br>
+            served with steamed White Rice</p>
         </div>
         <span>&#8358; 5000</span>
       </div>
@@ -453,8 +453,8 @@
     <div class="grid">
       <div class="flex">
         <div>
-          <h4>Sweet and Sour Shredded Chicken</h4>
-          <p>Stir fried with Vegetables served with Rice.</p>
+          <h4>Sweet and Sour<br>Shredded Chicken</h4>
+          <p>Stir Fried with Vegetables<br>Served with Rice.</p>
         </div>
         <span>&#8358; 4500</span>
       </div>
