--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
       <div class="flex">
         <div>
           <h4>Orange Chicken</h4>
-          <p>with steamed White Rice or Mashed Potatoes</p>
+          <p>with steamed White Rice<br>or Mashed Potatoes</p>
         </div>
         <span>&#8358; 4000</span>
       </div>
@@ -475,14 +475,14 @@
       <div class="flex">
         <div>
           <h4>Chinese Stir Fried Chicken</h4>
-          <p>Served with Rice or Pasta of you choice<br> and Vegetables</p>
+          <p>Served with Rice or<br>Pasta of you choice and Vegetables</p>
         </div>
         <span>&#8358; 4000</span>
       </div>
       <div class="flex">
         <div>
           <h4>Chicken Kebab Cubes</h4>
-          <p>Cooked with Onions and Sweet Pepper<br>served with French Fries</p>
+          <p>With Onions and Sweet Pepper<br>served with French Fries</p>
         </div>
         <span>&#8358; 4000</span>
       </div>
