--- a/index.html
+++ b/index.html
@@ -156,7 +156,8 @@
       <div class="flex">
         <div>
           <h4>Mediterranean<br>Couscous Salad</h4>
-          <p>*Basil,Tomatoes,Parsley<br>Red and Green Pepper,<br>Mint,Lemon Zest,Onions<br>Dry Oregano,Black Pepper<br>Couscous
+          <p>*Basil,Tomatoes,Parsley<br>Red and Green Pepper,<br>Mint,Lemon Zest,Onions<br>Dry Oregano,Black
+            Pepper<br>Couscous
             and Sea Salt</p>
         </div>
         <span>&#8358; 4500</span>
@@ -213,7 +214,7 @@
         <div>
           <h4>Cinnamon Rice</h4>
           <p>Served with Broccoli<br>with a choice of <br>Beef/Goat Meat/Fish/Chicken<br>
-          with Plantain or Coleslaw</p>
+            with Plantain or Coleslaw</p>
         </div>
         <span>&#8358;4000</span>
       </div>
@@ -474,7 +475,7 @@
       </div>
       <div class="flex">
         <div>
-          <h4>Chinese Stir Fried Chicken</h4>
+          <h4>Chinese Stir<br>Fried Chicken</h4>
           <p>Served with Rice or<br>Pasta of you choice and Vegetables</p>
         </div>
         <span>&#8358; 4000</span>
@@ -522,7 +523,7 @@
       <div class="flex">
         <div>
           <h4>Savory Shredded Beef</h4>
-          <p>Stir fried Beef <br>with Vegetables served with Rice or Potatoes</p>
+          <p>Stir fried Beef with Vegetables<br>served with Rice or Potatoes</p>
         </div>
         <span>&#8358; 4500</span>
       </div>
@@ -535,8 +536,8 @@
       </div>
       <div class="flex">
         <div>
-          <h4>Beef stroganoff with Mushrooms</h4>
-          <p>Served with steamed White Rice or Pasta</p>
+          <h4>Beef Stroganoff<br>with Mushrooms</h4>
+          <p>with steamed White Rice or Pasta</p>
         </div>
         <span>&#8358;4500</span>
       </div>
@@ -544,19 +545,19 @@
 
 
     <!-- Main Course Fish -->
-    <h2 class="head-center">Main Courses Fish</h2>
+    <h2 class="head-center">Fish</h2>
     <div class="grid">
       <div class='flex'>
         <div>
           <h4>Buttered Fried Fish Fillet</h4>
-          <p>Served with Mashed Potatoes,Vegetable and Lemon</p>
+          <p>With Mashed Potatoes,Vegetable and Lemon</p>
         </div>
         <span>&#8358;5000 </span>
       </div>
       <div class="flex">
         <div>
           <h4>Buttered Fried Fish Fillet</h4>
-          <p>Served with Mashed Potatoes,Vegetable and Lemon</p>
+          <p>With Mashed Potatoes,Vegetable and Lemon</p>
         </div>
         <span>&#8358;5000 </span>
       </div>
@@ -583,7 +584,7 @@
       </div>
       <div class="flex">
         <div>
-          <h4>Sweet and Sour Fish Fillet </h4>
+          <h4>Sweet and Sour<br>Fish Fillet </h4>
           <p>with White Rice</p>
         </div>
         <span>&#8358; 5000</span>
